--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ You can install the development version from [GitHub](https://github.com/) with:
 ``` r
 # install.packages("devtools")
 library(devtools)
-devtools::install_github("bmcgaughey1/HexSampleR")
+devtools::install_github("bmcgaughey1/HexSampleR", build_vignettes = TRUE)
 ```
 ## Example
 
